--- a/Styles/index.css
+++ b/Styles/index.css
@@ -9,6 +9,10 @@ body {
     font-family: Arial, sans-serif;
 }
 
+h2 {
+    margin: 40px 0px 0px 20px;
+}
+
 #links {
     display: flex;
     justify-content: space-evenly;
@@ -52,7 +56,7 @@ select {
 }
 
 form h2{
-    margin: 15px 0px;
+    margin: 15px 2px;
 }
 
 form {
