--- a/Styles/index.css
+++ b/Styles/index.css
@@ -115,3 +115,41 @@ button {
 button:hover {
     background-color: #006666;
 }
+
+
+div a {
+    color: teal;
+    position: relative;
+    margin: 10px;
+    padding: 6px;
+    font-family: 'Merriweather', serif;
+    text-decoration: none;
+    transition: color 0.25s ease-in;
+}
+
+a::before,
+a::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: rgb(72, 104, 101);
+    transform-origin: center;
+    transition: transform 0.25s ease-out;
+    transform: scaleX(0);
+}
+
+a::before {
+    top: 0;
+}
+
+a::after {
+    bottom: 0;
+}
+
+a:hover::before,
+a:hover::after {
+    transform: scaleX(1);
+}
